--- a/index.html
+++ b/index.html
@@ -3,33 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');
+    </style>
     <title>VanillaWeather</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
+  <div class="VanillaWeather">
   <body>
     <head>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
+      <form class="search-form">
+        <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+        <input type="submit" value="Search" class="search-form-button" />
       </form>
     </head>
     <main>
+    <div class="weather-data">
       <div>
-        <h1>Vienna</h1>
-        <p>
+        <h1 class="city">Vienna</h1>
+        <p class="details">
           Friday 12:46, sunny
           <br />
-          Humidity: 45%, Wind: 7,4 km/h
+          Humidity: <strong>45%</strong>, Wind: <strong>7,4 km/h</strong>
         </p>
       </div>
-      <div>☀️ 15°C</div>
+      <div class="temperature">
+        <div class="weather-icon">☀️</div> 
+        <div class="temperature-value">15</div>
+        <div class="unit">°C</div>
+    </div>
+    </div>
     </main>
     <footer>
       This project was coded by
       <a href="https://github.com/evamariapesendorfer" target="_blank">
-        Eva-Maria,</a
+        Eva-Maria Pesendorfer,</a
       >
       is <a href="" target="_blank">open-sourced on GitHub</a> and
       <a href="" target="_blank">hosted on Netify.</a>
     </footer>
+    </div>
   </body>
 </html>
