--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <div class="VanillaWeather">
   <body>
     <head>
-      <form class="search-form">
-        <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+      <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter a city.." required id="search-form-input" class="search-form-input" />
         <input type="submit" value="Search" class="search-form-button" />
       </form>
     </head>
     <main>
     <div class="weather-data">
       <div>
-        <h1 class="city">Vienna</h1>
+        <h1 class="city" id="city">Vienna</h1>
         <p class="details">
           Friday 12:46, sunny
           <br />
@@ -43,5 +43,6 @@
       <a href="" target="_blank">hosted on Netify.</a>
     </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
