--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </style>
     <title>VanillaWeather</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
   </head>
   <div class="VanillaWeather">
   <body>
