Update weather display elements in index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       <div>
         <h1 class="city" id="city">Vienna</h1>
         <p class="details">
-          Friday 12:46, sunny
+          <span id="time"></span>
+          <span id="description"></span>
           <br />
-          Humidity: <strong>45%</strong>, Wind: <strong>7,4 km/h</strong>
+          Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
         </p>
       </div>
       <div class="temperature">
