Replace weather icon div with an empty icon div

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
       </div>
       <div class="temperature">
-        <div class="weather-icon">☀️</div> 
+        <div id="icon"></div> 
         <div class="temperature-value" id="temperature-value">15</div>
         <div class="unit">°C</div>
     </div>
