Update footer links for GitHub and Netlify

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <a href="https://github.com/evamariapesendorfer" target="_blank">
         Eva-Maria Pesendorfer,</a
       >
-      is <a href="" target="_blank">open-sourced on GitHub</a> and
-      <a href="" target="_blank">hosted on Netify.</a>
+      is <a href="https://github.com/evamariapesendorfer/SheCodes_VanillaWeather" target="_blank">open-sourced on GitHub</a> and
+      <a href="https://evma-shecodes-vanillaweather.netlify.app/" target="_blank">hosted on Netify.</a>
     </footer>
     </div>
     <script src="index.js"></script>
