--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         Eva-Maria Pesendorfer,</a
       >
       is <a href="https://github.com/evamariapesendorfer/SheCodes_VanillaWeather" target="_blank">open-sourced on GitHub</a> and
-      <a href="https://evma-shecodes-vanillaweather.netlify.app/" target="_blank">hosted on Netify.</a>
+      <a href="https://evma-shecodes-vanillaweather.vercel.app/" target="_blank">hosted on Netify.</a>
     </footer>
     </div>
     <script src="index.js"></script>
