Add forecast section to index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <div class="unit">°C</div>
     </div>
     </div>
+    <div class="forecast">
+      <div class="forecast-day">Tue</div>
+      <div class="forecast-icon">☀️</div>
+      <div class="forecast-temperatures">9° 5°</div>
+    </div>
     </main>
     <footer>
       This project was coded by
