--- a/index.html
+++ b/index.html
@@ -36,9 +36,21 @@
     </div>
     </div>
     <div class="forecast">
-      <div class="forecast-day">Tue</div>
+      <div class="forecast-day">
+      <div class="forecast-date">Tue</div>
       <div class="forecast-icon">☀️</div>
-      <div class="forecast-temperatures">9° 5°</div>
+      <div class="forecast-temperatures">
+        <div class="forecast-temperature"><strong>9°</strong></div>
+        <div class="forecast-temperature"><strong>5°</strong></div>
+        </div>
+    </div>
+        <div class="forecast-day">
+      <div class="forecast-date">Tue</div>
+      <div class="forecast-icon">☀️</div>
+      <div class="forecast-temperatures">
+        <div class="forecast-temperature"><strong>9°</strong></div>
+        <div class="forecast-temperature"><strong>5°</strong></div>
+        </div>
     </div>
     </main>
     <footer>
