Refactor forecast section in index.html
Removed old forecast section and added a new weather forecast div.

--- a/index.html
+++ b/index.html
@@ -35,22 +35,7 @@
         <div class="unit">°C</div>
     </div>
     </div>
-    <div class="forecast">
-      <div class="forecast-day">
-      <div class="forecast-date">Tue</div>
-      <div class="forecast-icon">☀️</div>
-      <div class="forecast-temperatures">
-        <div class="forecast-temperature"><strong>9°</strong></div>
-        <div class="forecast-temperature"><strong>5°</strong></div>
-        </div>
-    </div>
-        <div class="forecast-day">
-      <div class="forecast-date">Tue</div>
-      <div class="forecast-icon">☀️</div>
-      <div class="forecast-temperatures">
-        <div class="forecast-temperature"><strong>9°</strong></div>
-        <div class="forecast-temperature"><strong>5°</strong></div>
-        </div>
+    <div class="weather-forecast" id="forecast">
     </div>
     </main>
     <footer>
